--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,18 @@
             name="description"
             content="Web site created using create-react-app"
         />
+
+        <meta
+            name="image"
+            property="og:image"
+            content="/images/screenshotMain.png"
+        />
+        <meta
+            name="url"
+            property="og:url"
+            content="https://calendar-mern-jc.netlify.app/"
+        />
+
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
