--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <meta
             name="image"
             property="og:image"
-            content="/images/screenshotMain.png"
+            content="https://calendar-mern-jc.netlify.app/images/screenshotMain.png"
         />
         <meta
             name="url"
