--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,22 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta
-            name="description"
-            content="Web site created using create-react-app"
-        />
 
         <meta
             name="image"
             property="og:image"
-            content="https://calendar-mern-jc.netlify.app/images/screenshotMain.png"
+            content="/images/screenshotMain.png"
         />
         <meta
             name="url"
             property="og:url"
             content="https://calendar-mern-jc.netlify.app/"
         />
+        <meta
+            name="description"
+            content="Ecommerce de un restaurante de mariscos"
+        />
+        <meta name="author" content="Juan Carlos Cedano Velazquez" />
 
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
